// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sao-tm should include React 1`] = `
"# foo

[![NPMVersion](https://badgen.net/npm/v/foo)](https://npm.im/foo)

> my stunning project

## License

MIT &copy; mock_username
"
`;

exports[`sao-tm should include React 2`] = `
"{
  \\"name\\": \\"foo\\",
  \\"version\\": \\"0.0.1\\",
  \\"script\\": {
    \\"dev\\": \\"tsc --watch\\",
    \\"build\\": \\"tsc\\",
    \\"test\\": \\"npm run build && jest\\",
    \\"prepublish\\": \\"npm run test\\"
  },
  \\"dependencies\\": {
    
      \\"react\\": \\"^16\\",
      \\"react-dom\\": \\"^16\\"
    
  },
  \\"devDependencies\\": {
    
    
      \\"@types/react\\": \\"^16\\",
      \\"@types/react-dom\\": \\"^16\\",
    
    \\"typescript\\": \\"^3\\",
    \\"jest\\": \\"^23\\"
  }
}"
`;

exports[`sao-tm should not include React 1`] = `
"# foo

[![NPMVersion](https://badgen.net/npm/v/foo)](https://npm.im/foo)

> my brilliant project

## License

MIT &copy; mock_username
"
`;

exports[`sao-tm should not include React 2`] = `
"{
  \\"name\\": \\"foo\\",
  \\"version\\": \\"0.0.1\\",
  \\"script\\": {
    \\"dev\\": \\"tsc --watch\\",
    \\"build\\": \\"tsc\\",
    \\"test\\": \\"npm run build && jest\\",
    \\"prepublish\\": \\"npm run test\\"
  },
  \\"dependencies\\": {
    
  },
  \\"devDependencies\\": {
    
      \\"@types/node\\": \\"^11\\",
    
    
    \\"typescript\\": \\"^3\\",
    \\"jest\\": \\"^23\\"
  }
}"
`;
